# vss-workshop

./: .gitignore  00_START_HERE_VSS_WORKSHOP.ipynb  LICENSE-3rd-party.txt  README.md  release_metadata.yaml
.github/: copy-pr-bot.yaml  nv-slack-bot.yaml
.github/scripts/: check_container_tag_source.py  check_no_patented_codecs.py  source_check_only_nonbuild.py  test_check_no_patented_codecs.py  test_source_check_only_nonbuild.py  trigger-downstream-pipeline.sh
.github/skill-eval/: AGENTS.md  README.md  plan_matrix.py  skills_eval_agent.py
.github/skill-eval/docs/: matrix-dispatch-design.md
.github/skill-eval/envs/: brev_env.py
.github/skill-eval/specs/: stale-marker.spec
.github/skill-eval/tests/: test_plan_matrix.py
.github/skill-eval/verifiers/: generic_judge.py
.github/skills-nv-base/: README.md  skill_compliance_check.py
.github/skills-review/: consolidate.py  review_agent.py
.github/skills-review/tests/: test_consolidate.py  test_review_agent.py
.github/vss-playbook-compliance/: skill_compliance_check.py
.github/workflows/: check-agent-container-source.yml  check-ui-container-source.yml  ci.yml  skills-eval-daily.yml  skills-eval.yml  skills-nv-base.yml  sonarqube.yml  vss-playbook-compliance.yml
deploy/docker/: README.md
deploy/docker/scripts/: blueprint-deploy.sh  deploy_nemoclaw_vss.ipynb  deploy_smartcities_launchable.ipynb  dev-profile.sh  (+4 more)
libs/analytics/spatialai-data-utils/release/: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
libs/nv-schema/: README.md
libs/nvschema/: README.md
services/agent/: README.md
services/alert/: Dockerfile  config.yaml  deploy_docker-compose.yml  openapi.json  realtime-config-sample.yaml
services/video-summarization/: LICENSE.3rdparty  README.md  VERSION  pyproject.toml
services/vios/: Makefile  README.md  build.sh
skills/: README.md
skills/vss-ask-video/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-deploy-dense-captioning/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-deploy-detection-tracking-2d/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-deploy-detection-tracking-3d/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/vss-deploy-profile/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/vss-deploy-video-embedding/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-generate-video-calibration/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/vss-generate-video-report/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/vss-generate-video-report-rag/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/vss-manage-alerts/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/vss-manage-video-io-storage/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-query-analytics/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-search-archive/: skill-card.md  skill.oms.sig
skills/vss-setup-behavior-analytics/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-setup-video-analytics-api/: SKILL.md  skill-card.md  skill.oms.sig
skills/vss-summarize-video/: SKILL.md  skill-card.md  skill.oms.sig
tools/sdg-postprocessing/: 3rdParty_Licenses.md
workshop/runtime/: LICENSE-3rd-party-deploy.txt  NOTICE.md  compose.yml
workshop/scripts/: deploy_vss_base.sh
(+653 files in other folders)
