[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialai-data-utils"
description = "Utility functions for SpatialAI Datasets"
authors = [{ name = "NVIDIA CORPORATION" }]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "NOTICE",
    "3rdParty_Licenses.md",
    "NVIDIA-Software-License-Agreement.pdf",
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "3d object perception",
    "multi-target multi-camera tracking",
    "warehouse",
    "retail store",
    "hospital",
]
dependencies = [
    "lap==0.5.12",
    "tqdm==4.67.1",
    "scipy==1.15.3",
    "tabulate==0.9.0",
    "fvcore==0.1.5.post20221221",
    "iopath==0.1.9",
    "shapely==2.0.7",
    "h5py==3.16.0",
    "jsonschema==4.23.0",
    "boto3==1.36.2",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "requests==2.32.3",
    "pandas==2.3.3",
    # Promoted to direct deps: previously transitive via nuscenes-devkit (now an
    # opt-in `eval` extra), but imported directly by the visualization,
    # calibration and geometry code, so they must survive nuscenes' removal.
    "matplotlib==3.11.0",
    "pyquaternion==0.9.9",
    "scikit-learn==1.9.0",
    "pycocotools==2.0.11",
    "pillow==12.2.0",
    # Pinned explicitly so numpy is identical across ALL install options. The
    # `eval` extra (nuscenes-devkit) caps numpy<2.0.0; without this pin the base
    # / `viz` install would float to numpy 2.x and diverge from the eval/full +
    # locked set. Matches v2.0.0, where nuscenes was mandatory and numpy was
    # always 1.26.4. (numpy 1.26.4 has no cp313 wheel -> built from source on
    # Python 3.13.)
    "numpy==1.26.4",
]
dynamic = ["version"]

[project.optional-dependencies]
# OpenCV (cv2) for the visualization / video code paths. Kept out of the base
# install so the default dependency set stays free of OpenCV, which bundles
# ffmpeg (flagged by OSRB); the code raises a clear ImportError when missing.
# NOTE: installing this extra pulls OpenCV, which ships with bundled ffmpeg
# libraries and codecs -- review their licenses and terms of distribution
# and use before installing.
viz = ["opencv-python-headless>=4.5.4.58,<=4.11.0.86"]
# nuscenes-devkit for the eval subpackage (detection / tracking / HOTA / AICity
# MTMC) and core.boxes.aicity_box, which subclass nuscenes classes at import
# time and therefore require it. Installing it also pulls OpenCV transitively.
# motmetrics is only used by the nuscenes-gated tracking eval (eval.tracking.algo
# via nuscenes.eval.tracking) and is NOT declared by nuscenes-devkit, so it is
# pinned here explicitly alongside it.
eval = ["nuscenes-devkit==1.2.0", "motmetrics==1.4.0"]
full = [
    "spatialai-data-utils[viz,eval]",
    "torch>=2.10.0",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@33824be",
]

[tool.setuptools]
package-dir = {"" = ".."}
include-package-data = true

[tool.setuptools.packages.find]
where = [".."]
include = ["spatialai_data_utils", "spatialai_data_utils.*"]
